[gd_scene load_steps=4 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]
[ext_resource path="res://default_font.tres" type="DynamicFont" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[node name="Test" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Directory" type="Button" parent="HBoxContainer"]
margin_right = 253.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "设置目录位置"

[node name="File" type="Button" parent="HBoxContainer"]
margin_left = 257.0
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "设置文件位置"

[node name="Compress" type="Button" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 767.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "压缩"

[node name="Decompress" type="Button" parent="HBoxContainer"]
margin_left = 771.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "解压"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 498.0
margin_bottom = 174.0
window_title = "保存文件"
access = 2

[connection signal="pressed" from="HBoxContainer/Directory" to="." method="_on_Directory_pressed"]
[connection signal="pressed" from="HBoxContainer/File" to="." method="_on_File_pressed"]
[connection signal="pressed" from="HBoxContainer/Compress" to="." method="_on_Compress_pressed"]
[connection signal="pressed" from="HBoxContainer/Decompress" to="." method="_on_Decompress_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
